--- a/src/components/TechnologyNav.astro
+++ b/src/components/TechnologyNav.astro
@@ -12,6 +12,12 @@ const { techLink } = Astro.props;
     padding: 0;
   }
 
+  @media (min-width: 768px) {
+    .tech__links {
+      padding: 3rem 0;
+    }
+  }
+
   .tech__link {
     display: flex;
     align-items: center;
@@ -23,6 +29,14 @@ const { techLink } = Astro.props;
     width: 4rem;
     height: 4rem;
     color: var(--white);
+  }
+
+  @media (min-width: 768px) {
+    .tech__link {
+      font-size: 2.4rem;
+      width: 6rem;
+      height: 6rem;
+    }
   }
 
   .tech__link--active {
